# nyborg-rpa

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
examples/: hello.py
src/nyborg_rpa/scripts/: anniversary_next_year.py  ms_license_monitor.py  resident_milestones_for_next_year.py  verify_sygeplejersker_auth.py
src/nyborg_rpa/scripts/ad/: ad_fixes.py  ad_mail_attr_fix.ipynb  ad_new_sofd_users.ipynb
src/nyborg_rpa/scripts/kp/: calculate_helbredstillaeg.py  helbredstillaeg_manual_mail_report.py
src/nyborg_rpa/scripts/nexus/: backup_nexus_beredskab.py  close_patient_documents.py  compression_scan_medcom_letters.py  dietist_scan_medcom_letters.py  dynamic_temp_send_letter.py  find_moved_patienst_changes.py  find_moved_patients_changes.py
src/nyborg_rpa/scripts/os2rollekatalog/: tes_sync.py
src/nyborg_rpa/scripts/os2sofd/: los_integration.py
src/nyborg_rpa/scripts/prisme/: parse_oioubl_invoice.py  resourcecentral_integration.py
src/nyborg_rpa/scripts/sd/: find_employee_email.py
src/nyborg_rpa/scripts/tools/: pad_test.py  rdp_login.py
src/nyborg_rpa/tests/: os2sofd_client.ipynb
src/nyborg_rpa/utils/: abm.py  auth.py  cryptography.py  datafordeler.py  email.py  example.py  excel.py  git.py  mfa_login.py  ms_graph.py  nexus_client.py  os2rollekatalog_client.py  os2sofd_client.py  pad.py  rdp.py  send_mail.py  sharepoint.py  tunstall_client.py
