[project]
name = "nyborg-rpa"
version = "0.1.0"
description = "Workspace of Nyborg RPA."
readme = "README.md"
authors = [
    { name = "Martin Androvich", email = "martinandrovich@gmail.com" },
    { name = "Emil Damholt Andersen", email = "damholt-a@live.dk" },
]
requires-python = "~=3.13.0"
dependencies = [
    "argh>=0.31.3",
]

[dependency-groups]
dev = [
    "kmd-nova-client",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kmd-nova-client = { path = "./packages/kmd-nova-client", editable = true }

[tool.black]
line-length = 120
