[project]
name = "nyborg-rpa"
version = "0.1.0"
description = "Workspace of Nyborg RPA."
readme = "README.md"
authors = [
    { name = "Martin Androvich", email = "martinandrovich@gmail.com" },
    { name = "Emil Damholt Andersen", email = "damholt-a@live.dk" },
]
requires-python = "~=3.13.0"
dependencies = [
    "argh>=0.31.3",
    "authlib>=1.6.0",
    "lxml>=5.4.0",
    "nicegui>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
    "pywebview>=5.4",
    "xlsxwriter>=3.2.3",
]

[dependency-groups]
dev = [
    "kmd-nova-client",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]

[project.scripts]
rdp_login = "nyborg_rpa.scripts.tools.rdp_login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kmd-nova-client = { path = "./packages/kmd-nova-client", editable = true }

[tool.black]
line-length = 120
