[project]
name = "nyborg-rpa"
version = "0.1.0"
description = "Workspace of Nyborg RPA."
readme = "README.md"
authors = [
    { name = "Martin Androvich", email = "martinandrovich@gmail.com" },
    { name = "Emil Damholt Andersen", email = "damholt-a@live.dk" },
]
requires-python = "~=3.13.0"
dependencies = [
    "argh>=0.31.3",
    "authlib>=1.6.0",
    "bs4>=0.0.2",
    "cryptography>=45.0.3",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "nicegui>=2.17.0",
    "office365-rest-python-client>=2.6.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
    "pywebview>=5.4",
    "tqdm>=4.67.1",
    "xlsxwriter>=3.2.3",
    "playwright>=1.52.0",
    "frozendict>=2.4.7",
    "bidict>=0.23.1",
    "nbconvert>=7.16.6",
    "ldap3>=2.9.1",
    "joblib>=1.5.2",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "kmd-nova-client",
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "ruff>=0.11.8",
]

[project.scripts]
rdp_login = "nyborg_rpa.scripts.tools.rdp_login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kmd-nova-client = { path = "./packages/kmd-nova-client", editable = true }

[tool.black]
line-length = 200

[tool.isort]
profile = "black"
line_length = 200
